# stm32-touchscreen-dino

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
.west/: config
boards/st/dino_nucleo_f429zi/: Kconfig.defconfig  Kconfig.dino_nucleo_f429zi  board.yml  dino_nucleo_f429zi.dts  dino_nucleo_f429zi.yaml
scripts/: Dockerfile  build.sh  build_docker_image.sh  flash.sh  prepare_sd.sh  run_docker.sh
src/: main.cpp
src/display/: display.cpp  display.h
tests/: CMakeLists.txt
